--- a/style.css
+++ b/style.css
@@ -7,11 +7,19 @@
 .hero{
     width: 100%;
     height: 100vh;
-    background: url(images/background.png);
     background-position: center;
     position: relative; 
     overflow: hidden;
 }
+.video-bg{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+    }
 .logo{
     width: 100px;
     cursor: pointer;
@@ -135,4 +143,69 @@ cursor: pointer;
 }
 .bubble img:nth-child(7){
     animation-delay: 5s;
+}
+ 
+
+/* Popup Modal Background */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    backdrop-filter: blur(3px);
+    justify-content: center;
+    align-items: center;
+}
+
+/* Popup Box */
+.modal-content {
+    background: white;
+    width: 60%;
+    padding: 30px;
+    border-radius: 15px;
+    animation: fadeIn 0.4s ease;
+}
+
+@keyframes fadeIn {
+    from {opacity: 0; transform: scale(0.9);}
+    to {opacity: 1; transform: scale(1);}
+}
+
+/* Close Button */
+.close {
+    float: right;
+    font-size: 28px;
+    cursor: pointer;
+}
+
+/* Project Grid */
+.projects-grid {
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+}
+
+.project-card {
+    background: #f3f3f3;
+    padding: 20px;
+    border-radius: 12px;
+    font-size: 18px;
+    text-align: center;
+    transition: 0.3s ease;
+    cursor: pointer;
+}
+
+.project-card:hover {
+    background: #e5e5e5;
+    transform: translateY(-5px);
+}
+@media (max-width: 768px) {
+    .projects-grid {
+        grid-template-columns: 1fr;
+    }
 }
